--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,7 @@
   --dark-gray: #F8F9FA;
   --steel-blue: #263B4C;
   --black-text: rgb(94, 113, 125);
+  --rotary-gold: #ffd700;
   --mont-font: 'Montserrat', sans-serif;
 }
 
